[package]
name = "bitoku-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
bitoku-sdk-agent-native = {path = "../bitoku-sdk-agent",features = ["no-entrypoint"]}
solana-program = "1.14.13"
